added multiple server and twitch accounts support